--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
-
-        {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
-    </head>
-    <body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}My Symfony App{% endblock %}</title>
+    <link rel="stylesheet" href="{{ asset('css/style.css') }}?v={{ random() }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+</head>
+<body>
+  <header>
+    <nav>
+        <ul>
+            <li>
+                <a>
+                    <img src="{{ asset('images/logo.jpg') }}" alt="Logo" class="logo">
+                </a>
+            </li>
+            <li><a href="{{ path('series_index') }}">Accueil</a></li>
+            <li><a href="{{ path('series_new') }}" class="add-series">Ajouter des Séries</a></li>
+            <li class="search-icon">
+                <a href="{{ path('series_search') }}" title="Search">
+                    <i class="fas fa-search"></i>
+                </a>
+            </li>
+        </ul>
+    </nav>
+</header>
+    <main>
         {% block body %}{% endblock %}
-    </body>
+    </main>
+    <footer>
+        <p>&copy; 2024 My Symfony App</p>
+    </footer>
+</body>
 </html>
